<resources>
    <string name="app_name">Tweeter</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="sampleTimeStamp">"May-19_2:47"</string>
    <string name="sampleMessage">"My First Post"</string>
    <string name="title_activity_authentication">Authentication</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>