<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".view.main.story.StoryFragment">

    <ImageView
        android:id="@+id/status_userImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:contentDescription="@string/userImageContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/status_userImage">

        <TextView
            android:id="@+id/status_userAlias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/sampleUserName"/>

        <TextView
            android:id="@+id/status_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/sampleAlias"/>

        <TextView
            android:id="@+id/status_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/sampleTimeStamp"/>

        <TextView
            android:id="@+id/status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/sampleMessage"/>

    </LinearLayout>
</RelativeLayout>